Fixed settings to look decent on safari and chrome

--- a/source/css/settings.css
+++ b/source/css/settings.css
@@ -1,6 +1,6 @@
 #usersettings {
     margin-top: 1rem;
-    margin-left: 35%;
+    margin-left: 31%;
 }
 .password {
     margin-top: 25px;
@@ -37,8 +37,11 @@ input.txtinput {
 }
 
 input[type="password"] {
-    font-size:xxx-large;
+    font-size:xx-large;
+    width: 80%;
+    height: 50%
 }
+
 
 .submit {
     font-family: 'IBM Plex Sans';
@@ -93,10 +96,12 @@ input[type="password"] {
     max-width: 550px;
     padding-bottom: 10px;
     padding-left: 10px;
+    margin-left: 1rem;
 }
 
 .settingform {
     margin-bottom: 50px;
+    margin-top: 50px
 }
 
 
